--- a/ECL_Model/ECL_Model/ECL_Model.vcxproj
+++ b/ECL_Model/ECL_Model/ECL_Model.vcxproj
@@ -115,6 +115,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Attach.h" />
+    <ClInclude Include="Laser_Model.h" />
+    <ClInclude Include="Templates.h" />
+    <ClInclude Include="Test_Functions.h" />
+    <ClInclude Include="Useful.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Laser_Model.cpp" />
+    <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Useful.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
